--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>spanishSite</title>
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
-
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style/style.css">
 </head>
 
@@ -149,7 +148,7 @@
             <div class="container">
                 <form action="#" class="start__form">
                     <div class="form__group">
-                        <label for="select2" class="form__label">SomeText</label>
+                        <label class="form__label" for="select1">SomeText</label>
                         <select class="select form__select" name="select1" id="select1">
                             <option value="" class="select__option">option 1</option>
                             <option value="" class="select__option">option 2</option>
@@ -157,7 +156,7 @@
                         </select>
                     </div>
                     <div class="form__group">
-                        <label for="form__select2" class="form__label">Some Text</label>
+                        <label class="form__label" for="form__select2">Some Text</label>
                         <select class="select form__select" name="select2" id="select2">
                             <option value="" class="select__option">option 1</option>
                             <option value="" class="select__option">option 2</option>
