--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <i class="home__text-italic">Si no encuentras </i>
                         una oferta para ti,
                         <i class="home__text-italic">es porque...</i> <span class="home__text-accent">aún</span>
-                       <div class="clearfix"></div>
+                        <div class="clearfix"></div>
                         <span class="home__text-accent">NO TE CONOCEN.</span>
                     </h1>
                 </div>
@@ -75,7 +75,7 @@
                     </a>
                 </div>
             </div>
-            <div class="b-toBottom"></div>
+            <div class="scrollToNext"></div>
         </section>
         <section class="experience">
             <div class="container">
@@ -143,7 +143,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="b-toBottom"></div>
+            <div class="scrollToNext"></div>
         </section>
         <section class="services">
             <p class="services__text-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -170,11 +170,10 @@
             </div>
         </section>
         <section class="start">
-            <div class="start__block-top">Start now!
-            </div>
+            <div class="start__block-top">Start now!</div>
             <div class="container">
                 <form action="#" class="start__form">
-                    <div class="form__group form__group--i">
+                    <div class="form__group">
                         <label class="form__label" for="select1">SomeText</label>
                         <select class="select select2 form__select" name="select1" id="select1">
                             <option value="" class="select__option">option 1</option>
@@ -239,23 +238,21 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div class="contact">
-                <div class="container">
-                    <h1 class="contact__ttl">¿Alguna Pregunta? Contacta con nosotros</h1>
-                    <form action="#" class="contact__form">
-                        <div class="form__group">
-                            <input required class="form__input" type='tel' placeholder="number">
-                        </div>
-                        <div class="form__group">
-                            <input required class="form__input" type="email" placeholder="email">
-                        </div>
-                        <div class="form__group">
-                            <textarea required class="form__textarea" name="contactText" placeholder="message" id="contactText"></textarea>
-                        </div>
-                        <button class="form__btn-contact" type="button">Send your request ></button>
-                    </form>
-                </div>
+        <section class="contact">
+            <div class="container">
+                <h1 class="contact__ttl">¿Alguna Pregunta? Contacta con nosotros</h1>
+                <form action="#" class="contact__form">
+                    <div class="form__group">
+                        <input required class="form__input" type='tel' placeholder="number">
+                    </div>
+                    <div class="form__group">
+                        <input required class="form__input" type="email" placeholder="email">
+                    </div>
+                    <div class="form__group">
+                        <textarea required class="form__textarea" name="contactText" placeholder="message" id="contactText"></textarea>
+                    </div>
+                    <button class="form__btn-contact" type="button">Send your request ></button>
+                </form>
             </div>
         </section>
     </main>
