--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
         <section class="experience">
             <div class="container">
                 <p class="experience__text">¿Porqué esperar una oferta de empleo?
-                    <br>
                     ¿Porqué esperar a ser el elegido?</p>
                 <h1 class="experience__ttl">¡ELIGE TÚ!</h1>
                 <ul class="experience__list">
@@ -189,7 +188,7 @@
                             <option value="" class="select__option">option 3</option>
                         </select>
                     </div>
-                    <div class="form-group">
+                    <div class="form__group">
                         <input type="search" placeholder="some text" class="form__search" id="search" name="search">
                     </div>
                 </form>
