--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 			<nav class="nav">
 				<ul class="nav__list">
 					<li class="nav__list-item">
-						<a href="#" class="nav__link nav__link--active">FIRST LINK</a>
+						<a href="#start" class="nav__link nav__link--active">FIRST LINK</a>
 					</li>
 					<li class="nav__list-item">
-						<a href="#" class="nav__link">SECOND LINK</a>
+						<a href="#comments" class="nav__link">SECOND LINK</a>
 					</li>
 					<li class="nav__list-item">
-						<a href="#" class="nav__link">THIRD LINK</a>
+						<a href="#contact" class="nav__link">THIRD LINK</a>
 					</li>
 				</ul>
 			</nav>
@@ -169,7 +169,7 @@
 				</ul>
 			</div>
 		</section>
-		<section class="start">
+		<section class="start" id="start">
 			<div class="start__block-top">Start now!</div>
 			<div class="container">
 				<form action="#" class="start__form">
@@ -195,7 +195,7 @@
 				</form>
 			</div>
 		</section>
-		<section class="comments">
+		<section class="comments" id="comments">
 			<div class="container displayFlexRow">
 				<div class="comments__col-left">
 					<h3 class="comments__ttl">
@@ -238,7 +238,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="contact">
+		<section class="contact" id="contact">
 			<div class="container">
 				<h1 class="contact__ttl">¿Alguna Pregunta? Contacta con nosotros</h1>
 				<form action="#" class="contact__form">
