--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<a href="#" class="logo header__logo">
 				<img src="http://personal.ho.ua/spanishSite/img/Logo%20Marrone.png" alt="" class="logo__img">
 			</a>
-			<div class="nav-wrap"><p></p>
+			<div class="nav-wrap">
 				<nav class="nav">
 					<ul class="nav__list">
 						<li class="nav__list-item">
