--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header class="header">
 		<div class="container displayFlexRow">
 			<a href="#" class="logo header__logo">
-				<img src="http://personal.ho.ua/spanishSite/img/Logo%20Marrone.png" alt="" class="logo__img">
+				<img src="img/Logo%20Marrone.png" alt="" class="logo__img">
 			</a>
 			<div class="nav-wrap">
 				<nav class="nav">
