--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="style/style.css">
 </head>
 
-<body>
+<body class="body">
 	<header class="header">
 		<div class="container displayFlexRow">
 			<a href="#" class="logo header__logo">
@@ -30,8 +30,8 @@
 					</ul>
 				</nav>
 			</div>
-			<div class="menu-hamburger">
-				<span class="menu-hamburger__line"></span>
+			<div class="hamburger">
+				<span class="hamburger__line"></span>
 			</div>
 		</div>
 	</header>
